--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="game"></div>
+
+    <script type="text/javascript">
+
+    document.onkeyup=function(){
+        alert('pressed a button');
+    };
+    </script>
 </body>
 </html>
