removed extra index

--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Hangman</title>
 </head>
+
 <body>
-    <div id="game"></div>
+    <img src="" alt="">
+    <div>Current Word:
+        <span id="currentWord"></span>
+    </div>
+    <div>Wins:
+        <span id="score"></span>
+    </div>
+    <div>Number of Guesses Left:
+        <span id="guessLeft"></span>
+    </div>
+    <div>Letters Already Guessed:
+        <span id="wrongLetters"></span>
+    </div>
 
-    <script type="text/javascript">
 
-    document.onkeyup=function(){
-        alert('pressed a button');
-    };
-    </script>
 </body>
+
 </html>
