--- a/index.html
+++ b/index.html
@@ -5,25 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Over+the+Rainbow" rel="stylesheet">
     <title>Hangman</title>
 </head>
 
 <body>
-    <img src="" alt="">
-    <div>Current Word:
-        <span id="currentWord"></span>
+    <div class="row">
+        <div class="jumbotron jumbotron-fluid gameHeader">
+            <div class="container">
+                <img src="assets/images/Header.png" class="img-fluid" alt="Responsive image">
+            </div>
+        </div>
     </div>
-    <div>Wins:
-        <span id="score"></span>
     </div>
-    <div>Number of Guesses Left:
-        <span id="guessLeft"></span>
-    </div>
-    <div>Letters Already Guessed:
-        <span id="wrongLetters"></span>
-    </div>
+    <div class="row">
+        <div="mainContainer">
+            <div class="col-md-6">
 
+            </div>
+            <div class="col-md-6">
+                <div>Current Word:
+                    <span id="currentWord"></span>
+                </div>
+                <div>Wins:
+                    <span id="score"></span>
+                </div>
+                <div>Number of Guesses Left:
+                    <span id="guessLeft"></span>
+                </div>
+                <div>Letters Already Guessed:
+                    <span id="wrongLetters"></span>
+                </div>
+            </div>
+    </div>
+    </div>
+    <script src="index.js"></script>
 
 </body>
 
