--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                     <img src="assets/images/Header.png" alt="logo" style="width: 100%;height: 100%;">
                 </div>
             </div>
+            <div class="row instructions">
+                <h2>#Basic Beach Essentials</h2>
+            </div>
             <div class="row">
                 <div class="col-md-6 photoArea">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -61,7 +64,7 @@
         </section>
     </div>
 
-    <script src="index.js"></script>
+    <script src="game.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
