--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <div style="height: 30px;">Letters Already Guessed:
                         <span id="wrongLetters"></span>
                     </div>
+                    <div><span id="message"></span></div>
                 </div>
             </div>
         </section>
